2005-06-27  Mike Kestner  <mkestner@novell.com>

	* gnome/CanvasBpath.custom : a BPath property to wrap the ugly Bpath
	IntPtr prop.  [Fixes #75381]

2005-06-24  Mike Kestner  <mkestner@novell.com>

	* atk/Atk.metadata : couple of small api cleanups.

2005-06-24  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : remove the one reference to FileChooserEmbed.
	* gtk/gtk-api-2.*.raw : regen.
	* sources/gtk-sharp-2.*-sources.xml : exclude FileChooserEmbed files.

2005-06-23  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs : support owned and elements_owned for lists.
	* glib/List.cs : add ctor overloads for memory mgmt.
	* glib/ListBase.cs : add ctor overloads for memory mgmt. Dispose
	elements if specified.
	* glib/SList.cs : add ctor overloads for memory mgmt.
	* gnome/Gnome.metadata : unhide and generate a List prop.
	* gnomevfs/Gnomevfs.metadata : unhide and generate a List prop.
	* gtk/FileChooser.custom : new. add hidden props.
	* gtk/FileChooserButton.custom : new. impl hidden props.
	* gtk/FileChooserDialog.custom : remove some List props and use the
	GLib.Marshaller for the remaining ones..
	* gtk/FileChooserWidget.custom : remove some List props and use the
	GLib.Marshaller for the remaining ones..
	* gtk/Gtk.metadata : unhide and let the generator do some List props.

2005-06-23  Mike Kestner  <mkestner@novell.com>

	* gconf/GConf/Client.cs : support add/remove of a single notify handle
	to multiple directories.  [Fixes #55877]

2005-06-22  Mike Kestner  <mkestner@novell.com>

	* sample/GladeTest.cs : add a menu item signal connect to test for the
	problem described in bug#74946.
	* sample/test.glade : add menubar.

2005-06-22  Mike Kestner  <mkestner@novell.com>

	* sample/GtkDemo/DemoHyperText.cs : replace PersistentData usage that
	breaks on csc.
	* sample/GtkDemo/DemoTreeStore.cs : fix a 2.0 usage.

2005-06-22  Mike Kestner  <mkestner@novell.com>

	* generator/ManagedCallString.cs : don't assume ref for structs.