@@ -791,5 +791,17 @@ Default value: 0
         <since version="Gtk# 2.6" />
       </Docs>
     </Member>
+  <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public ComboBox (string[] entries);" />
+      <MemberType>Constructor</MemberType>
+      <Parameters>
+        <Parameter Name="entries" Type="System.String[]" />
+      </Parameters>
+      <Docs>
+        <param name="entries">A list of string values for the combo entries.</param>
+        <summary>Creates a Combo box from a list of values.</summary>
+        <remarks />
+      </Docs>
+    </Member>
   </Members>
 </Type>
