@@ -117,5 +117,17 @@
         </Attribute>
       </Attributes>
     </Member>
+  <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public ComboBoxEntry (string[] entries);" />
+      <MemberType>Constructor</MemberType>
+      <Parameters>
+        <Parameter Name="entries" Type="System.String[]" />
+      </Parameters>
+      <Docs>
+        <param name="entries">a list of strings for the dropdown list.</param>
+        <summary>Creates a combo entry from a list of entries.</summary>
+        <remarks />
+      </Docs>
+    </Member>
   </Members>
 </Type>
