@@ -1,9 +1,7 @@
-//  Gtk.ComboBox.custom - Gtk ComboBox customizations
+//  Gtk.ComboBoxEntry.custom - Gtk ComboBoxEntry customizations
 //
-//  Authors:  Todd Berman  <tberman@off.net>
-//  	      Mike Kestner  <mkestner@novell.com>
+//  Authors:   Mike Kestner  <mkestner@novell.com>
 //
-//  Copyright (c) 2004 Todd Berman
 //  Copyright (c) 2005 Novell, Inc.
 //
 // This program is free software; you can redistribute it and/or
@@ -20,22 +18,9 @@
 // Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 // Boston, MA 02111-1307, USA.
 
-		public ComboBox (string[] entries) : this (new ListStore (typeof (string)))
+		public ComboBoxEntry (string[] entries) : this (new ListStore (typeof (string)), 0)
 		{
-			CellRendererText cell = new CellRendererText ();
-			PackStart (cell, true);
-			SetAttributes (cell, "text", 0);
 			foreach (string entry in entries)
 				AppendText (entry);
 		}
 
-		public void SetAttributes (CellRenderer cell, params object[] attrs)
-		{
-			if (attrs.Length % 2 != 0)
-				throw new ArgumentException ("attrs should contain pairs of attribute/col");
-
-			ClearAttributes (cell);
-			for (int i = 0; i < attrs.Length - 1; i += 2) {
-				AddAttribute (cell, (string) attrs [i], (int) attrs [i + 1]);
-			}
-		}
