@@ -1,3 +1,10 @@
+2005-06-28  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/ComboBox.custom : add ctor (string[]).
+	* gtk/ComboBoxEntry.custom : add ctor (string[]).
+	* sample/test/TestComboBox.cs : simple new ComboBox tester.
+	* sample/test/WidgetViewer.cs : button for simple new ComboBox tester.
+
 2005-06-27  Mike Kestner  <mkestner@novell.com>
 
 	* gnome/CanvasBpath.custom : a BPath property to wrap the ugly Bpath
